# binance-rs

./: .gitignore  Cargo.toml  README.md  tarpaulin-report.html
api/: Cargo.toml
api/src/: endpoint.rs  model.rs  spot.rs
api/src/endpoint/: host.rs  route.rs
api/src/model/: error.rs  params.rs  response.rs
api/src/model/params/: account.rs  binance.rs  general.rs  interval.rs  market.rs  trading.rs  url.rs
api/src/model/response/: account.rs  general.rs  market.rs  trading.rs
api/src/spot/: base.rs
binance-common/: Cargo.toml
binance-common/src/: enums.rs  error.rs  lib.rs  url.rs
binance-common/src/enums/: futures.rs  spot.rs
binance-common/src/futures/endpoint/: host.rs  route.rs
binance-common/src/futures/model/params/: account.rs  market.rs  trade.rs  websocket.rs
binance-common/src/futures/model/response/: account.rs  market.rs  trade.rs  websocket.rs
binance-common/src/model/response/: general.rs
binance-common/src/spot/: endpoint.rs
binance-common/src/spot/endpoint/: host.rs  route.rs
binance-common/src/spot/model/: params.rs  response.rs
binance-common/src/spot/model/params/: account.rs  binance.rs  market.rs  trade.rs
binance-common/src/spot/model/response/: trade.rs
binance-core/: Cargo.toml
binance-core/src/: client.rs  lib.rs  utility.rs  websocket.rs
binance-core/src/client/: asynchronous.rs  signer.rs  synchronous.rs
binance-core/src/client/signer/: hmacsha256.rs  signature.rs
binance-core/src/signer/: ed25519.rs  hmacsha256.rs  signature.rs
binance-core/src/websocket/: controller.rs  engine.rs  handler.rs  supervisor.rs
binance-core/src/websocket/futures/: market.rs
binance-core/src/websocket/futures/market/: controller.rs  engine.rs  handler.rs  supervisor.rs
binance-futures/: Cargo.toml
binance-futures/src/: account.rs  lib.rs  market.rs  synchronous.rs  trade.rs
binance-futures/src/asynchronous/: account.rs  market.rs  trade.rs  websocket.rs
binance-futures/src/synchronous/: account.rs  market.rs  websocket.rs
binance-futures/tests/: account.rs  asynchronous.rs  market.rs  synchronous.rs  trade.rs  websocket.rs
binance-futures/tests/asynchronous/: account.rs  market.rs  trade.rs  websocket.rs
binance-futures/tests/synchronous/: account.rs  market.rs  trade.rs
binance-rs/: Cargo.toml
binance-rs/src/: lib.rs
binance-spot/: Cargo.toml
binance-spot/src/: account.rs  general.rs  lib.rs  market.rs  spot.rs  trade.rs
binance-spot/src/asynchronous/: account.rs  general.rs  market.rs  trade.rs
binance-spot/src/spot/: account.rs  general.rs  market.rs  secret.rs  trade.rs  trading.rs
binance-spot/src/synchronous/: account.rs  general.rs  market.rs  trade.rs
binance-spot/tests/: account.rs  general.rs  market.rs  trade.rs
binance-websocket/: Cargo.toml
binance-websocket/src/: futures.rs
binance-websocket/src/futures/: market.rs
binance-websocket/tests/: websocket.rs
core/: Cargo.toml
core/src/: api.rs  client.rs  endpoints.rs  lib.rs  model.rs  spot.rs
core/src/api/: base.rs
core/src/api/spot/: base.rs  path.rs
core/src/client/: asynchronous.rs  signer.rs  synchronous.rs
core/src/client/signer/: hmac256.rs  hmacsha256.rs  signature.rs
core/src/endpoints/: error.rs
core/src/model/: spot.rs
core/src/model/spot/: general.rs
core/src/spot/: account.rs  general.rs  market.rs  trading.rs
core/tests/: general.rs  market.rs
