[package]
name = "binance-common"
version = "0.1.0"
edition = "2024"
authors = ["Denis Gruia <denis.gruiax@icloud.com>"]
description = "Common data structures, error types, and utilities shared across Binance API crates."
license = "MIT OR Apache-2.0"
repository = "https://github.com/denisgruiax/binance-rs.git"

[dependencies]
hmac = "0.12.1"
reqwest = "0.12.15"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_with = {version = "3.12.0", features = ["macros"]}
