[package]
name = "binance-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = "2.1.1"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = {version = "0.12.15", features = ["blocking", "json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = {version = "0.26.2", features = ["native-tls"] }
binance-common = {path = "../binance-common"}
chrono = "0.4.40"
