[package]
name = "binance-core"
version = "0.1.0"
edition = "2024"
authors = ["Denis Gruia <denis.gruiax@icloud.com>"]
description = "Core functionality including API request signing, HTTP client setup, and shared logic for Binance Spot and Futures."
license = "MIT OR Apache-2.0"
repository = "https://github.com/denisgruiax/binance-rs.git"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "pem"] }
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = {version = "0.12.15", features = ["blocking", "json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = {version = "0.26.2", features = ["native-tls"] }
binance-common = {path = "../binance-common", version = "0.1.0"}
chrono = "0.4.40"
rand = "0.8"
base64 = "0.22.1"
