[package]
name = "binance-futures"
version = "0.2.0"
edition = "2024"
authors = ["Denis Gruia <denis.gruiax@icloud.com>"]
description = "Binance Futures API client implementation with models, endpoints, and streaming support."
license = "MIT OR Apache-2.0"
repository = "https://github.com/denisgruiax/binance-rs.git"

[dependencies]
binance-common = {path = "../binance-common", version = "0.2.0"}
binance-core = {path = "../binance-core", version = "0.2.0"}
reqwest = {version = "0.12.15", features = ["blocking", "json"]}
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
dotenv = "0.15.0"
once_cell = "1.21.3"
