[package]
name = "binance-rs"
version = "0.1.0"
edition = "2024"
authors = ["Denis Gruia <denis.gruiax@icloud.com>"]
description = "Facade crate for the Binance Rust ecosystem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/denisgruiax/binance-rs.git"

[dependencies]
binance-common = { path = "../binance-common" }
binance-core = { path = "../binance-core" }
binance-futures = { path = "../binance-futures" }
binance-spot = { path = "../binance-spot" }