[package]
name = "binance-spot"
version = "0.1.0"
edition = "2024"

[dependencies]
binance-common = {path = "../binance-common"}
binance-core = {path = "../binance-core"}
reqwest = {version = "0.12.15", features = ["blocking", "json"]}
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"