[package]
name = "binance-spot"
version = "0.1.0"
edition = "2024"
authors = ["Denis Gruia <denis.gruiax@icloud.com>"]
description = "Binance Spot API client implementation with REST support for spot trading."
license = "MIT OR Apache-2.0"
repository = "https://github.com/denisgruiax/binance-rs.git"

[dependencies]
binance-common = {path = "../binance-common"}
binance-core = {path = "../binance-core"}
reqwest = {version = "0.12.15", features = ["blocking", "json"]}
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"