[package]
name = "binance-websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
binance-common = {path = "../binance-common"}
futures-util = "0.3.31"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = {version = "0.26.2", features = ["native-tls"] }
