[package]
name = "binance-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = "2.1.1"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = {version = "0.12.15", features = ["blocking", "json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
binance-api = {path = "../api"}
chrono = "0.4.40"
futures = "0.3.31"
mockito = "1.7.0"
mockall = "0.13.1"
